# mactop-scraper

./: .gitignore  README.md
.config/: goreleaser.yaml
.github/: dependabot.yml
.github/workflows/: go-build.yml  go-release.yml
analyzer/: main.py  pyproject.toml
scraper/: client.go  go.mod  go.sum  main.go  model.go
scraper/.config/: goreleaser.yaml
